Fix spacing bugs

--- a/app/assets/stylesheets/pages/_score.scss
+++ b/app/assets/stylesheets/pages/_score.scss
@@ -2,7 +2,7 @@
 
 .collabs {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7);
-  width: 600px;
+  width: 100%;
   height: 150px;
   margin: auto;
   margin-top: 50px;
@@ -54,4 +54,8 @@
 .create-score {
   margin: auto;
   width: 50%;
+}
+.score-form {
+  float: right;
+  position: relative;
 }
